Increases bottom margin of home page slideshow to 5em to correct spacing

--- a/docroot/sites/all/themes/custom/wsdot_classic/css/styles.css
+++ b/docroot/sites/all/themes/custom/wsdot_classic/css/styles.css
@@ -398,7 +398,7 @@ div.pane-node-field-legacy-map p:first-of-type { margin: 0em !important; }
 
 /* Flex Slider */
 #slideshow {
-	margin-bottom: 3.5em;
+	margin-bottom: 5em;
 	border: none;
 }
 
